planning out full project
